--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 	
 	<section class="full" id="home">
 	
-		<h1 class="mega">네오플라이는<br />당신의 열정과 미래에<br />투자합니다.</h1>
+		<h1 class="mega"><p>네오플라이는</p><p>당신의 열정과 미래에</p><p>투자합니다.</p></h1>
 		<a class="button white light scroller" href="#portfolio">View More</a>
 	
 	</section>
@@ -65,8 +65,6 @@
 				<a href="*" class="active button">All</a>
 				<a href=".alumni" class="button">Alumni</a>
 				<a href=".current" class="active button">Current</a>
-				<a href=".game" class="button">Game</a>
-				<a href=".service" class="button">Service</a>
 			</div>
 			
 			<div class="clear"></div><!--CLEAR FLOATS-->
@@ -75,42 +73,28 @@
 	</section>
 	
 	<section class="dark-wrapper">
-	
 		<div class="wrapper overflow-hidden">
-		
 			<div id="loader"></div>
-			
 			<ul class="clearfix portfolio-isotope portfolio scroll-animate bottom">
-							
 				<li class="current game">
-					<a href="single-portfolio.html" class="isotope-alt-image">
-						<img src="img/i1.jpg" alt="image" />
+					<a href="/detail/likelion.html" class="isotope-alt-image">
+						<img src="img/likelion.png" alt="image" />
 						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
+							<h4>라이크라이언<small>프로그래밍을 쉽게 알려드립니다</small></h4>
 						</div>
 					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
 				</li>
 				
 				<li class="current service">
-					<a href="single-portfolio-image.html" class="isotope-alt-image">
-						<img src="img/i2.jpg" alt="image" />
+					<a href="/detail/carffeine.html" class="isotope-alt-image">
+						<img src="img/carffeine.png" alt="image" />
 						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
+							<h4>카페인<small>When IT manias control Cars.</small></h4>
 						</div>
 					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
 				</li>
+
+
 				<li class="alumni service">
 					<a href="single-portfolio-video.html" class="isotope-alt-image">
 						<img src="img/i3.jpg" alt="image" />
