add 1day1song, gachyon, spacosa

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 							<a href="#facilities" class="scroller">Facilities</a>
 						</li>
 						<li>
-							<a href="#mentos" class="scroller">Mentos</a>
+							<a href="#mentors" class="scroller">Mentors</a>
 						</li>
 						<li>
 							<a href="#contact" class="scroller">Contact</a>
@@ -75,86 +75,55 @@
 	<section class="dark-wrapper">
 		<div class="wrapper overflow-hidden">
 			<div id="loader"></div>
-			<ul class="clearfix portfolio-isotope portfolio scroll-animate bottom">
-				<li class="current game">
-					<a href="/detail/likelion.html" class="isotope-alt-image">
-						<img src="img/likelion.png" alt="image" />
-						<div>
-							<h4>라이크라이언<small>프로그래밍을 쉽게 알려드립니다</small></h4>
-						</div>
-					</a>
-				</li>
-				
-				<li class="current service">
-					<a href="/detail/carffeine.html" class="isotope-alt-image">
-						<img src="img/carffeine.png" alt="image" />
-						<div>
-							<h4>카페인<small>When IT manias control Cars.</small></h4>
-						</div>
-					</a>
-				</li>
+        <ul class="clearfix portfolio-isotope portfolio scroll-animate bottom">
+          <li class="current">
+            <div class="isotope-alt-image">
+              <img src="img/likelion.png" alt="image" />
+              <div>
+                <h4 style="margin-bottom:0px;">라이크라이언</h4>
+                <p>프로그래밍을 쉽게 알려드립니다</p>
+              </div>
+            </a>
+          </li>
 
+          <li class="current service">
+            <div class="isotope-alt-image">
+              <img src="img/carffeine.png" alt="image" />
+              <div>
+                <h4>카페인<small>When IT manias control Cars.</small></h4>
+              </div>
+            </a>
+          </li>
 
-				<li class="alumni service">
-					<a href="single-portfolio-video.html" class="isotope-alt-image">
-						<img src="img/i3.jpg" alt="image" />
-						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
-						</div>
-					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
-				</li>
-				<li class="current game">
-					<a href="single-portfolio.html" class="isotope-alt-image">
-						<img src="img/i4.jpg" alt="image" />
-						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
-						</div>
-					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
-				</li>
-				<li class="current game">
-					<a href="single-portfolio-image.html" class="isotope-alt-image">
-						<img src="img/i5.jpg" alt="image" />
-						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
-						</div>
-					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
-				</li>
-				<li class="alumni service">
-					<a href="single-portfolio-video.html" class="isotope-alt-image">
-						<img src="img/i6.jpg" alt="image" />
-						<div>
-							<h4>Company title<small>Web Design, Development</small></h4>
-						</div>
-					</a>
-					<div class="isotope-alt-details">
-						<div>
-							<h4 class="remove-bottom">Company title</h4>
-							<p class="meta">Web Design, Development</p>
-						</div>
-					</div>
-				</li>
+          <li class="current service">
+            <div class="isotope-alt-image">
+              <img src="img/gachyon.png" alt="image" />
+              <div>
+                <h4>Gachyon<small>게임은 내가 만든다.</small></h4>
+              </div>
+            </a>
+          </li>
 
-			</ul>
+          <li class="current service">
+            <div class="isotope-alt-image">
+              <img src="img/1day1song.png" alt="image" />
+              <div>
+                <h4>원데이원송<small>노래나부르송</small></h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="current service">
+            <div class="isotope-alt-image">
+              <img src="img/spacosa.png" alt="image" />
+              <div>
+                <h4>스파코사<small>엄마는 걱정이 많아.</small></h4>
+              </div>
+            </a>
+          </li>
+
+        </ul>
 		</div>
-		
 	</section>
 	
 	<section class="small-padding" id="facilities">
@@ -235,7 +204,7 @@
 		
 	</section>
 	
-	<section class="small-padding" id="mentos">
+	<section class="small-padding" id="mentors">
 		
 		<div class="wrapper">
 			<h3 class="floatleft">네오플라이 멘토단<small>각 분야의 전문가로 구성된 실전 멘토단을 중심으로 스타트업 성공 가능성을 높여줍니다.</small></h3>
