sundaytoz is added.

--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,15 @@
             </a>
           </li>
 
+          <li class="current service">
+            <div class="isotope-alt-image">
+              <img src="img/sundaytoz.png" alt="image" />
+              <div>
+                <h4>선데이토즈<small>애니팡=아무거나다터진다!=만드는거다터진다!</small></h4>
+              </div>
+            </a>
+          </li>
+
         </ul>
 		</div>
 	</section>
