--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
 							<a href="#home" class="scroller active">Home</a>
 						</li>
 						<li>
+							<a href="#intro" class="scroller">Intro</a>
+						</li>
+						<li>
 							<a href="#portfolio" class="scroller">Portfolio</a>
 						</li>
 						<li>
@@ -52,14 +55,48 @@
 	<section class="full" id="home">
 	
 		<h1 class="mega"><p>네오플라이는</p><p>당신의 열정과 미래에</p><p>투자합니다.</p></h1>
-		<a class="button white light scroller" href="#portfolio">View More</a>
+		<a class="button white light scroller" href="#intro">View More</a>
 	
 	</section>
+	<section class="small-padding" id="intro">
+		<div class="wrapper">
+			<h3 class="floatleft">Intro<small class="portfolio-filter">네오플라이는 당신의 열정과 미래에 투자합니다</small></h3>
+			<div class="clear"></div><!--CLEAR FLOATS-->
+		</div>
+	
+	</section>
+	<section class="dark-wrapper">
+		<div class="wrapper overflow-hidden">
+			<div id="loader"></div>
+			<div class="full_width widget scroll-animate right">
+        <div class="service"><img src="img/title.png" alt="image" /></div>
+				<h5>네오플라이는</h5>
+        <p>스타트업이 필요로 하는 자원을 제공하고, 멘토의 역할을 해 드리기 위해서 만든 <span style="color:#ff0000;font-weight:bold;text-decoration:underline">인큐베이션 및 투자 프로그램</span>입니다.<br>
+        네오플라이는 예비 창업자 분들을 포함한 <span style="text-decoration:underline">초기 기업에 관심</span>을 갖고 있습니다.<br>
+        이미 인터넷 사업에서 다양한 변신을 성공적으로 해낸 <span style="text-decoration:underline">네오위즈의 축적된 경험을 바탕</span>으로 초기 기업들에게 더 나은 성장을 위해서 <span style="text-decoration:underline">적극적인 멘토링과 지원</span>을 해 드립니다.<br>
+        또한 <span style="text-decoration:underline">네오위즈의 다양한 인터넷 서비스들과 시너지</span>를 낼 수 있는 기회도 많습니다.<br>
+				<h5>네오플라이는</h5>
+        <p>좋은 멤버들과 함께 편안하고 <span style="text-decoration:underline;font-weight:bold;color:#ff0000;">일에만 집중할 수 있는 근무 환경을 제공</span>해 드립니다.<br>
+        자신이 가장 좋아하는 일을 실현하고, 그 일을 하는데 최적화된 오피스를 무료로 사용할 수 있고, 사무용 책상, 의자, 가구 등을 지원 받아서 <span style="text-decoration:underline;">초기 투자 비용을 크게 줄일 수</span> 있습니다.<br>
+        입주사들에게는 개별 사무공간과 회의실은 물론 각종 사무기기, 식사 등이 무상으로 지원되며, 사옥 내 각종 편의 시설도 함께 이용할 수 있습니다.<br>
+        네오위즈게임즈 판교신사옥 2층에 위치한 네오플라이센터는 총 <span style="text-decoration:underline;">125명, 약 20개 업체가 입주 가능</span>한 규모로 조성되어 있습니다.</p>
+			</div>
+			<div class="full_width widget scroll-animate right last">
+				<h5>입주 및 투자 진행 과정</h5>
+        <div class="service"><img src="img/process.png" alt="image" /></div>
+				<div class="break15"></div>
+        <p>각 단계는 <span style="font-weight:bold;">1) 네오플라이 지원서 작성 및 제출, 2) 네오플라이 상담, 3) 사업에 대한 구체적인 협의, 4) 입주/투자 심사, 5) 입주/투자</span> 로 구성되어 있습니다. <br>
+        기업에 따라 seeding 혹은 series A 단계까지 투자하며, 네오위즈그룹 내의 <span style="text-decoration:underline;">지온 인베스트먼트와 공동</span>으로 진행 할 수 있습니다.<br>
+        각 단계에서 필요한 세부적인 사항들에 대해서는 진행 과정에서 자세하게 알려드립니다.</p>
+			</div>
+
+			<div class="clear"></div>
+    </div>
+  </section>
 	
 	<section class="small-padding" id="portfolio">
-	
 		<div class="wrapper">
-			<h3 class="floatleft">Our Work <small class="portfolio-filter">We're really proud.</small></h3>
+			<h3 class="floatleft">Portfolio<small class="portfolio-filter">네오플라이 식구들입니다</small></h3>
 				
 			<div id="filters" class="floatright">
 				<a href="*" class="active button">All</a>
@@ -69,7 +106,6 @@
 			
 			<div class="clear"></div><!--CLEAR FLOATS-->
 		</div>
-		
 	</section>
 	
 	<section class="dark-wrapper">
@@ -81,12 +117,14 @@
               <img src="img/likelion.png" alt="image" />
               <div>
                 <h4 style="margin-bottom:0px;">라이크라이언</h4>
-                <p>프로그래밍을 쉽게 알려드립니다</p>
+                <p>온라인 프로그래밍 교육 스타트업입니다.<br>
+                서울대동아리 '멋쟁이 사자처럼'에 뿌리를 두고 있으며, KISA와 공동으로 코드라이언(<a href="http://codelion.net" target="_blank" style="color:white;">http://codelion.net</a>)을 진행하고 있습니다.</p>
+                </p>
               </div>
             </a>
           </li>
 
-          <li class="current service">
+          <li class="current">
             <div class="isotope-alt-image">
               <img src="img/carffeine.png" alt="image" />
               <div>
@@ -95,7 +133,7 @@
             </a>
           </li>
 
-          <li class="current service">
+          <li class="current">
             <div class="isotope-alt-image">
               <img src="img/gachyon.png" alt="image" />
               <div>
@@ -104,7 +142,7 @@
             </a>
           </li>
 
-          <li class="current service">
+          <li class="current">
             <div class="isotope-alt-image">
               <img src="img/1day1song.png" alt="image" />
               <div>
@@ -113,7 +151,7 @@
             </a>
           </li>
 
-          <li class="current service">
+          <li class="current">
             <div class="isotope-alt-image">
               <img src="img/spacosa.png" alt="image" />
               <div>
@@ -122,11 +160,20 @@
             </a>
           </li>
 
-          <li class="current service">
+          <li class="alumni">
             <div class="isotope-alt-image">
               <img src="img/sundaytoz.png" alt="image" />
               <div>
                 <h4>선데이토즈<small>애니팡=아무거나다터진다!=만드는거다터진다!</small></h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="current">
+            <div class="isotope-alt-image">
+              <img src="img/lockin.png" alt="image" />
+              <div>
+                <h4>락인컴퍼니<small>락앤롤댄스!</small></h4>
               </div>
             </a>
           </li>
@@ -138,7 +185,7 @@
 	<section class="small-padding" id="facilities">
 			
 		<div class="wrapper">
-			<h3 class="floatleft">시설/환경<small>편안하고 일에만 집중 할 수 있는 환경을 제공합니다.</small></h3>
+			<h3 class="floatleft">Facilities<small>편안하고 일에만 집중 할 수 있는 환경을 제공합니다.</small></h3>
 			<div class="clear"></div><!--CLEAR FLOATS-->
 		</div>
 		
@@ -150,62 +197,39 @@
 			<div class="one_half widget service scroll-animate left">
         <img src="img/fa6.jpg" alt="image" />
 				<div class="break15"></div>
-        <h4 class="margin-bottom-10">Space</h4>
-				<p>최대 13명 수용 가능한 공간 제공</p>
+				<p>최대 13명 수용 가능한 독립 공간 제공</p>
 			</div>
 
 			<div class="one_half widget service scroll-animate right last">
         <img src="img/fa1.jpg" alt="image" />
 				<div class="break15"></div>
-        <h4 class="margin-bottom-10">Food</h4>
 				<p>구내식당 점심제공</p>
 			</div>
 
-			<div class="one_third widget service scroll-animate left">
-        <img src="img/fa7.jpg" alt="image" />
-				<div class="break15"></div>
-        <h4 class="margin-bottom-10">Separation</h4>
-				<p>입주사별 독립공간 제공</p>
-			</div>
-
-			<div class="one_third widget service scroll-animate bottom">
-        <img src="img/fa5.jpg" alt="image" />
-				<div class="break15"></div>
-        <h4 class="margin-bottom-10">Discussion</h4>
-				<p>회의실 제공. 프로젝트 완비.</p>
-			</div>
-
-
-			<div class="one_third widget service scroll-animate right last">
+			<div class="one_half widget service scroll-animate left">
         <img src="img/fa2.jpg" alt="image" />
 				<div class="break15"></div>
-        <h4 class="margin-bottom-10">Drink</h4>
 				<p>까페테리어 음료제공</p>
 			</div>
 
-			<div class="one_fourth widget service scroll-animate left">
-        <img src="img/fa3.jpg" alt="image" />
+			<div class="one_half widget service scroll-animate right last">
+        <img src="img/fa5.jpg" alt="image" />
 				<div class="break15"></div>
-				<p>체육 시설 및 샤워실 제공</p>
+				<p>회의실 제공. 프로젝트 완비.</p>
 			</div>
 
-			<div class="one_fourth widget service scroll-animate top">
-        <img src="img/fa3.jpg" alt="image" />
-				<div class="break15"></div>
-				<p>체육 시설 및 샤워실 제공</p>
-			</div>
-
-			<div class="one_fourth widget service scroll-animate bottom">
-        <img src="img/fa3.jpg" alt="image" />
-				<div class="break15"></div>
-				<p>체육 시설 및 샤워실 제공</p>
-			</div>
-
-			<div class="one_fourth widget service scroll-animate right last">
+			<div class="one_half widget service scroll-animate left">
         <img src="img/fa4.jpg" alt="image" />
 				<div class="break15"></div>
 				<p>수면실 제공</p>
 			</div>
+
+			<div class="one_half widget service scroll-animate right last">
+        <img src="img/fa3.jpg" alt="image" />
+				<div class="break15"></div>
+				<p>체육 시설 및 샤워실 제공</p>
+			</div>
+
 
 			<div class="clear"></div>
 			
@@ -216,7 +240,7 @@
 	<section class="small-padding" id="mentors">
 		
 		<div class="wrapper">
-			<h3 class="floatleft">네오플라이 멘토단<small>각 분야의 전문가로 구성된 실전 멘토단을 중심으로 스타트업 성공 가능성을 높여줍니다.</small></h3>
+			<h3 class="floatleft">Neoply Mentors<small>각 분야의 전문가로 구성된 실전 멘토단을 중심으로 스타트업 성공 가능성을 높여줍니다.</small></h3>
 			<div class="clear"></div><!--CLEAR FLOATS-->
 		</div>
 		
@@ -414,7 +438,7 @@
 	<section class="small-padding" id="contact">
 			
 		<div class="wrapper">
-			<h3 class="floatleft">문의하기<small>네오플라이는 언제나 열려있습니다</small></h3>
+			<h3 class="floatleft">Contact<small>네오플라이는 언제나 열려있습니다</small></h3>
 			
 			<div class="clear"></div><!--CLEAR FLOATS-->
 		</div>
