4 companies are added.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 	<header>
 		<div class="wrapper clearfix">
 			<div class="one_fourth remove_bottom logo">
-				<a href="index.html">
+				<a href="/">
 					<img src="img/logo.png" alt="logo" class="retina" />
 				</a>
 			</div><!--/one_fourth-->
@@ -68,7 +68,7 @@
 	<section class="dark-wrapper">
 		<div class="wrapper overflow-hidden">
 			<div id="loader"></div>
-			<div class="full_width widget scroll-animate right">
+			<div class="full_width widget">
         <div class="service"><img src="img/title.png" alt="image" /></div>
 				<h5>네오플라이는</h5>
         <p>스타트업이 필요로 하는 자원을 제공하고, 멘토의 역할을 해 드리기 위해서 만든 <span style="color:#ff0000;font-weight:bold;text-decoration:underline">인큐베이션 및 투자 프로그램</span>입니다.<br>
@@ -81,7 +81,7 @@
         입주사들에게는 개별 사무공간과 회의실은 물론 각종 사무기기, 식사 등이 무상으로 지원되며, 사옥 내 각종 편의 시설도 함께 이용할 수 있습니다.<br>
         네오위즈게임즈 판교신사옥 2층에 위치한 네오플라이센터는 총 <span style="text-decoration:underline;">125명, 약 20개 업체가 입주 가능</span>한 규모로 조성되어 있습니다.</p>
 			</div>
-			<div class="full_width widget scroll-animate right last">
+			<div class="full_width widget last">
 				<h5>입주 및 투자 진행 과정</h5>
         <div class="service"><img src="img/process.png" alt="image" /></div>
 				<div class="break15"></div>
@@ -178,6 +178,33 @@
             </a>
           </li>
 
+          <li class="current">
+            <div class="isotope-alt-image">
+              <img src="img/bove.png" alt="image" />
+              <div>
+                <h4>아이디어보브<small>락앤롤댄스!</small></h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="current">
+            <div class="isotope-alt-image">
+              <img src="img/iamschool.png" alt="image" />
+              <div>
+                <h4>아이엠스쿨<small>락앤롤댄스!</small></h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="current">
+            <div class="isotope-alt-image">
+              <img src="img/realtrip.png" alt="image" />
+              <div>
+                <h4>마이리얼트립<small>락앤롤댄스!</small></h4>
+              </div>
+            </a>
+          </li>
+
         </ul>
 		</div>
 	</section>
@@ -250,15 +277,13 @@
 	
 		<div class="wrapper">
 			
+      <h5>CEO 멘토단</h5>
 			<ul class="clearfix portfolio-isotope">
 							
 				<li class="scroll-animate left member">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team1.jpg" alt="image" />
-						<div>
-							<h4>나성균<small> - CEO - Neowiz Holdings</small><small> - 내가 멘토킹</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">나성균</h4>
@@ -268,12 +293,9 @@
 				</li>
 				
 				<li class="scroll-animate top">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team2.jpg" alt="image" />
-						<div>
-							<h4>최관호<small> - CEO - Neowiz Internet</small><small> - 내가 제일 잘생김</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">최관호</h4>
@@ -283,12 +305,9 @@
 				</li>
 
 				<li class="scroll-animate right">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team3.jpg" alt="image" />
-						<div>
-							<h4>이기원<small> - CEO - Neowiz Games</small><small> - 내가 제일 잘 웃음</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">이기원</h4>
@@ -298,12 +317,9 @@
 				</li>
 
 				<li class="scroll-animate left">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team4.jpg" alt="image" />
-						<div>
-							<h4>송재경<small> - CEO - XL Games</small><small> - 내가 제일 수염많음</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">송재경</h4>
@@ -313,12 +329,9 @@
 				</li>
 
 				<li class="scroll-animate bottom">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team5.jpg" alt="image" />
-						<div>
-							<h4>이상규<small> - CEO - Neolab Convergence</small><small> - 내가 제일 정장 잘 입음</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">이상규</h4>
@@ -328,12 +341,9 @@
 				</li>
 
 				<li class="scroll-animate right">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team6.jpg" alt="image" />
-						<div>
-							<h4>이준환<small> - Professor - Seoul National University</small><small> - 교수가 짱이지</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">이준환</h4>
@@ -343,12 +353,9 @@
 				</li>
 
 				<li class="scroll-animate left">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team7.jpg" alt="image" />
-						<div>
-							<h4>임원기<small> - 기자 - 한국경제신문</small><small> - 펜은 칼보다 싸다</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">임원기</h4>
@@ -356,14 +363,14 @@
 						</div>
 					</div>
 				</li>
+      </ul>
 
+      <h5>실전멘토단</h5>
+			<ul class="clearfix portfolio-isotope">
 				<li class="scroll-animate bottom">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team8.jpg" alt="image" />
-						<div>
-							<h4>김명식<small> - CPO - Neowiz Games</small><small> - 법률부문</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">김명식</h4>
@@ -373,12 +380,9 @@
 				</li>
 
 				<li class="scroll-animate right">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team9.jpg" alt="image" />
-						<div>
-							<h4>임지선<small> - 센터장 - Neowiz Games</small><small> - 디자인부문</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">임지선</h4>
@@ -388,12 +392,9 @@
 				</li>
 
 				<li class="scroll-animate left">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team10.jpg" alt="image" />
-						<div>
-							<h4>도중은<small> - 선임연구원 - Neowiz Games</small><small> - 개발부문</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">도중은</h4>
@@ -402,12 +403,9 @@
 					</div>
 				</li>
 				<li class="scroll-animate bottom">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team11.jpg" alt="image" />
-						<div>
-							<h4>양수정<small> - 팀장 - Neowiz Holdings</small><small> - 회계부문</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">양수정</h4>
@@ -416,12 +414,9 @@
 					</div>
 				</li>
 				<li class="scroll-animate right">
-					<a href="#" class="isotope-alt-image">
+					<div class="isotope-alt-image">
 						<img src="img/team12.jpg" alt="image" />
-						<div>
-							<h4>김영민<small> - 심사역 - Zeon Investment</small><small> - 투자부문</small></h4>
-						</div>
-					</a>
+					</div>
 					<div class="isotope-alt-details">
 						<div>
 							<h4 class="remove-bottom">김영민</h4>
@@ -449,22 +444,13 @@
 	
 		<div class="wrapper clearfix">
 			
-			<div class="two_thirds scroll-animate left">
-				<div id="message"></div>
-				<form method="post" action="sendemail.php" id="contactform">
-					<input type="text" name="name" id="name" placeholder="Name" />
-					<input type="text" name="email" id="email" placeholder="Email" />
-					<input type="text" name="website" id="website" placeholder="Website" />
-					<textarea name="comments" id="comments" placeholder="Comments"></textarea>
-					<input type="submit" name="submit" value="Submit" />
-				</form>
-			</div>
 			
-			<div class="one_third last scroll-animate right">
-				<h5>Contact Us</h5>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar.</p>
-				<p class="margin-bottom-10"><i class="fa fa-map-marker fa-fixed-width"></i>&nbsp;성남시 분당구 대왕판교로 645번길 14 네오위즈 판교타워</p>
-				<p class="margin-bottom-10"><i class="fa fa-laptop fa-fixed-width"></i>&nbsp;<a href="contact@neowiz.com">contact@neowiz.com</a></p>
+			<div class="full_width widget">
+        <p>네오플라이는 언제나 열려있습니다.</p>
+        <p>네오플라이를 통해서 인큐베이션 및 투자 혹은 초기 기업에 대한 다양한 조언을 듣고 싶으시다면,<br>네오플라이 메일 주소로 현재 준비하고 계신 비즈니스에 대한 <span style="font-weight:bold;text-decoration:underline">사업계획서</span>와 멤버 소개가 포함된 <span style="font-weight:bold;text-decoration:underline">회사소개서</span>를 보내주시면 성심 성의껏 답변 드리도록 하겠습니다.<br>양식은 자유입니다.</p>
+				<p class="margin-bottom-10"><a href="mailto:contact@neowiz.com">contact@neowiz.com</a></p>
+        <p class="margin-bottom-10"><a href="http://facebook.com/neoply">http://facebook.com/neoply</a></p>
+				<p class="margin-bottom-10">성남시 분당구 대왕판교로 645번길 14 네오위즈 판교타워</p>
 			</div>
 			
 		</div>
@@ -475,11 +461,6 @@
 			
 		<div class="wrapper centered">
 			<div class="social">
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-flickr"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
 			</div>
 			
 			<div class="clear"></div><!--CLEAR FLOATS-->
@@ -490,7 +471,7 @@
 	<section class="small-padding dark-wrapper">
 			
 		<div class="wrapper">
-			<p class="centered">&copy; 2013 Neowiz-Neoply All right reserved.</p>
+			<p class="centered">&copy; 2013-2014 Neowiz-Neoply All right reserved.</p>
 			
 			<div class="clear"></div><!--CLEAR FLOATS-->
 		</div>
@@ -502,6 +483,7 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/plugins.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/neoply.js"></script>
 
 </body>
 </html>
