--- a/public/index.html
+++ b/public/index.html
@@ -111,99 +111,7 @@
 	<section class="dark-wrapper">
 		<div class="wrapper overflow-hidden">
 			<div id="loader"></div>
-        <ul class="clearfix portfolio-isotope portfolio scroll-animate bottom">
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/likelion.png" alt="image" />
-              <div>
-                <h4 style="margin-bottom:0px;">라이크라이언</h4>
-                <p>온라인 프로그래밍 교육 스타트업입니다.<br>
-                서울대동아리 '멋쟁이 사자처럼'에 뿌리를 두고 있으며, KISA와 공동으로 코드라이언(<a href="http://codelion.net" target="_blank" style="color:white;">http://codelion.net</a>)을 진행하고 있습니다.</p>
-                </p>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/carffeine.png" alt="image" />
-              <div>
-                <h4>카페인<small>When IT manias control Cars.</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/gachyon.png" alt="image" />
-              <div>
-                <h4>Gachyon<small>게임은 내가 만든다.</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/1day1song.png" alt="image" />
-              <div>
-                <h4>원데이원송<small>노래나부르송</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/spacosa.png" alt="image" />
-              <div>
-                <h4>스파코사<small>엄마는 걱정이 많아.</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="alumni">
-            <div class="isotope-alt-image">
-              <img src="img/sundaytoz.png" alt="image" />
-              <div>
-                <h4>선데이토즈<small>애니팡=아무거나다터진다!=만드는거다터진다!</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/lockin.png" alt="image" />
-              <div>
-                <h4>락인컴퍼니<small>락앤롤댄스!</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/bove.png" alt="image" />
-              <div>
-                <h4>아이디어보브<small>락앤롤댄스!</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/iamschool.png" alt="image" />
-              <div>
-                <h4>아이엠스쿨<small>락앤롤댄스!</small></h4>
-              </div>
-            </a>
-          </li>
-
-          <li class="current">
-            <div class="isotope-alt-image">
-              <img src="img/realtrip.png" alt="image" />
-              <div>
-                <h4>마이리얼트립<small>락앤롤댄스!</small></h4>
-              </div>
-            </a>
-          </li>
+        <ul id="companies" class="clearfix portfolio-isotope portfolio scroll-animate bottom">
 
         </ul>
 		</div>
@@ -480,7 +388,8 @@
 	
 	
 <!--LOAD SCRIPTS-->
-<script type="text/javascript" src="js/jquery.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script type="text/javascript" src="js/plugins.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/neoply.js"></script>
